# RS-adb-mcp

./: Cargo.toml  LICENSE  README.md
src/: main.rs
