[package]
name = "rs-adb-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
base64 = "0.21"
schemars = "0.8"
async-trait = "0.1"
futures = "0.3"

[[bin]]
name = "rs-adb-mcp"
path = "src/main.rs"
